Ex4/DndParser.java
// Generated from Dnd.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DndParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, SEP=37, NEWLINE=38, 
		INT=39, SP=40, TEXT=41;
	public static final int
		RULE_file = 0, RULE_hdr = 1, RULE_row = 2, RULE_name = 3, RULE_race = 4, 
		RULE_background = 5, RULE_date = 6, RULE_fclass = 7, RULE_justClass = 8, 
		RULE_subclass = 9, RULE_level = 10, RULE_feats = 11, RULE_hP = 12, RULE_aC = 13, 
		RULE_str = 14, RULE_dex = 15, RULE_con = 16, RULE_fint = 17, RULE_wis = 18, 
		RULE_cha = 19, RULE_alignment = 20, RULE_skills = 21, RULE_weapons = 22, 
		RULE_spells = 23, RULE_day = 24, RULE_processedAlignment = 25, RULE_good = 26, 
		RULE_lawful = 27, RULE_processedRace = 28, RULE_processedSpells = 29, 
		RULE_processedWeapons = 30, RULE_levelGroup = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "hdr", "row", "name", "race", "background", "date", "fclass", 
			"justClass", "subclass", "level", "feats", "hP", "aC", "str", "dex", 
			"con", "fint", "wis", "cha", "alignment", "skills", "weapons", "spells", 
			"day", "processedAlignment", "good", "lawful", "processedRace", "processedSpells", 
			"processedWeapons", "levelGroup"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'name'", "'race'", "'background'", "'date'", "'class'", "'justClass'", 
			"'subclass'", "'level'", "'feats'", "'HP'", "'AC'", "'Str'", "'Dex'", 
			"'Con'", "'Int'", "'Wis'", "'Cha'", "'alignment'", "'skills'", "'weapons'", 
			"'spells'", "'day'", "'processedAlignment'", "'good'", "'lawful'", "'processedRace'", 
			"'processedSpells'", "'processedWeapons'", "'levelGroup'", "'|'", "'NA'", 
			"'G'", "'N'", "'E'", "'L'", "'C'", "'\t'", null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "SEP", "NEWLINE", "INT", "SP", "TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Dnd.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DndParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public HdrContext hdr() {
			return getRuleContext(HdrContext.class,0);
		}
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			hdr();
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65);
				row();
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HdrContext extends ParserRuleContext {
		public List<TerminalNode> SEP() { return getTokens(DndParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(DndParser.SEP, i);
		}
		public TerminalNode NEWLINE() { return getToken(DndParser.NEWLINE, 0); }
		public HdrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hdr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterHdr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitHdr(this);
		}
	}

	public final HdrContext hdr() throws RecognitionException {
		HdrContext _localctx = new HdrContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_hdr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(T__0);
			setState(71);
			match(SEP);
			setState(72);
			match(T__1);
			setState(73);
			match(SEP);
			setState(74);
			match(T__2);
			setState(75);
			match(SEP);
			setState(76);
			match(T__3);
			setState(77);
			match(SEP);
			setState(78);
			match(T__4);
			setState(79);
			match(SEP);
			setState(80);
			match(T__5);
			setState(81);
			match(SEP);
			setState(82);
			match(T__6);
			setState(83);
			match(SEP);
			setState(84);
			match(T__7);
			setState(85);
			match(SEP);
			setState(86);
			match(T__8);
			setState(87);
			match(SEP);
			setState(88);
			match(T__9);
			setState(89);
			match(SEP);
			setState(90);
			match(T__10);
			setState(91);
			match(SEP);
			setState(92);
			match(T__11);
			setState(93);
			match(SEP);
			setState(94);
			match(T__12);
			setState(95);
			match(SEP);
			setState(96);
			match(T__13);
			setState(97);
			match(SEP);
			setState(98);
			match(T__14);
			setState(99);
			match(SEP);
			setState(100);
			match(T__15);
			setState(101);
			match(SEP);
			setState(102);
			match(T__16);
			setState(103);
			match(SEP);
			setState(104);
			match(T__17);
			setState(105);
			match(SEP);
			setState(106);
			match(T__18);
			setState(107);
			match(SEP);
			setState(108);
			match(T__19);
			setState(109);
			match(SEP);
			setState(110);
			match(T__20);
			setState(111);
			match(SEP);
			setState(112);
			match(T__21);
			setState(113);
			match(SEP);
			setState(114);
			match(T__22);
			setState(115);
			match(SEP);
			setState(116);
			match(T__23);
			setState(117);
			match(SEP);
			setState(118);
			match(T__24);
			setState(119);
			match(SEP);
			setState(120);
			match(T__25);
			setState(121);
			match(SEP);
			setState(122);
			match(T__26);
			setState(123);
			match(SEP);
			setState(124);
			match(T__27);
			setState(125);
			match(SEP);
			setState(126);
			match(T__28);
			setState(127);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RowContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<TerminalNode> SEP() { return getTokens(DndParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(DndParser.SEP, i);
		}
		public RaceContext race() {
			return getRuleContext(RaceContext.class,0);
		}
		public BackgroundContext background() {
			return getRuleContext(BackgroundContext.class,0);
		}
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public FclassContext fclass() {
			return getRuleContext(FclassContext.class,0);
		}
		public JustClassContext justClass() {
			return getRuleContext(JustClassContext.class,0);
		}
		public SubclassContext subclass() {
			return getRuleContext(SubclassContext.class,0);
		}
		public LevelContext level() {
			return getRuleContext(LevelContext.class,0);
		}
		public FeatsContext feats() {
			return getRuleContext(FeatsContext.class,0);
		}
		public HPContext hP() {
			return getRuleContext(HPContext.class,0);
		}
		public ACContext aC() {
			return getRuleContext(ACContext.class,0);
		}
		public StrContext str() {
			return getRuleContext(StrContext.class,0);
		}
		public DexContext dex() {
			return getRuleContext(DexContext.class,0);
		}
		public ConContext con() {
			return getRuleContext(ConContext.class,0);
		}
		public FintContext fint() {
			return getRuleContext(FintContext.class,0);
		}
		public WisContext wis() {
			return getRuleContext(WisContext.class,0);
		}
		public ChaContext cha() {
			return getRuleContext(ChaContext.class,0);
		}
		public AlignmentContext alignment() {
			return getRuleContext(AlignmentContext.class,0);
		}
		public SkillsContext skills() {
			return getRuleContext(SkillsContext.class,0);
		}
		public WeaponsContext weapons() {
			return getRuleContext(WeaponsContext.class,0);
		}
		public SpellsContext spells() {
			return getRuleContext(SpellsContext.class,0);
		}
		public DayContext day() {
			return getRuleContext(DayContext.class,0);
		}
		public ProcessedAlignmentContext processedAlignment() {
			return getRuleContext(ProcessedAlignmentContext.class,0);
		}
		public GoodContext good() {
			return getRuleContext(GoodContext.class,0);
		}
		public LawfulContext lawful() {
			return getRuleContext(LawfulContext.class,0);
		}
		public ProcessedRaceContext processedRace() {
			return getRuleContext(ProcessedRaceContext.class,0);
		}
		public ProcessedSpellsContext processedSpells() {
			return getRuleContext(ProcessedSpellsContext.class,0);
		}
		public ProcessedWeaponsContext processedWeapons() {
			return getRuleContext(ProcessedWeaponsContext.class,0);
		}
		public LevelGroupContext levelGroup() {
			return getRuleContext(LevelGroupContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(DndParser.NEWLINE, 0); }
		public RowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_row; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitRow(this);
		}
	}

	public final RowContext row() throws RecognitionException {
		RowContext _localctx = new RowContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_row);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			name();
			setState(130);
			match(SEP);
			setState(131);
			race();
			setState(132);
			match(SEP);
			setState(133);
			background();
			setState(134);
			match(SEP);
			setState(135);
			date();
			setState(136);
			match(SEP);
			setState(137);
			fclass();
			setState(138);
			match(SEP);
			setState(139);
			justClass();
			setState(140);
			match(SEP);
			setState(141);
			subclass();
			setState(142);
			match(SEP);
			setState(143);
			level();
			setState(144);
			match(SEP);
			setState(145);
			feats();
			setState(146);
			match(SEP);
			setState(147);
			hP();
			setState(148);
			match(SEP);
			setState(149);
			aC();
			setState(150);
			match(SEP);
			setState(151);
			str();
			setState(152);
			match(SEP);
			setState(153);
			dex();
			setState(154);
			match(SEP);
			setState(155);
			con();
			setState(156);
			match(SEP);
			setState(157);
			fint();
			setState(158);
			match(SEP);
			setState(159);
			wis();
			setState(160);
			match(SEP);
			setState(161);
			cha();
			setState(162);
			match(SEP);
			setState(163);
			alignment();
			setState(164);
			match(SEP);
			setState(165);
			skills();
			setState(166);
			match(SEP);
			setState(167);
			weapons();
			setState(168);
			match(SEP);
			setState(169);
			spells();
			setState(170);
			match(SEP);
			setState(171);
			day();
			setState(172);
			match(SEP);
			setState(173);
			processedAlignment();
			setState(174);
			match(SEP);
			setState(175);
			good();
			setState(176);
			match(SEP);
			setState(177);
			lawful();
			setState(178);
			match(SEP);
			setState(179);
			processedRace();
			setState(180);
			match(SEP);
			setState(181);
			processedSpells();
			setState(182);
			match(SEP);
			setState(183);
			processedWeapons();
			setState(184);
			match(SEP);
			setState(185);
			levelGroup();
			setState(186);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(DndParser.TEXT, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitName(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RaceContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(DndParser.TEXT, 0); }
		public RaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_race; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterRace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitRace(this);
		}
	}

	public final RaceContext race() throws RecognitionException {
		RaceContext _localctx = new RaceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_race);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BackgroundContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(DndParser.TEXT, 0); }
		public BackgroundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_background; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterBackground(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitBackground(this);
		}
	}

	public final BackgroundContext background() throws RecognitionException {
		BackgroundContext _localctx = new BackgroundContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_background);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DateContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(DndParser.TEXT, 0); }
		public DateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitDate(this);
		}
	}

	public final DateContext date() throws RecognitionException {
		DateContext _localctx = new DateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_date);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FclassContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(DndParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(DndParser.TEXT, i);
		}
		public FclassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fclass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterFclass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitFclass(this);
		}
	}

	public final FclassContext fclass() throws RecognitionException {
		FclassContext _localctx = new FclassContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fclass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(196);
				match(TEXT);
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__29) {
					{
					setState(197);
					match(T__29);
					}
				}

				}
				}
				setState(202); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JustClassContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(DndParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(DndParser.TEXT, i);
		}
		public JustClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_justClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterJustClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitJustClass(this);
		}
	}

	public final JustClassContext justClass() throws RecognitionException {
		JustClassContext _localctx = new JustClassContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_justClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(204);
				match(TEXT);
				setState(206);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__29) {
					{
					setState(205);
					match(T__29);
					}
				}

				}
				}
				setState(210); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubclassContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(DndParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(DndParser.TEXT, i);
		}
		public SubclassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subclass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterSubclass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitSubclass(this);
		}
	}

	public final SubclassContext subclass() throws RecognitionException {
		SubclassContext _localctx = new SubclassContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_subclass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(218);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TEXT) {
				{
				{
				setState(212);
				match(TEXT);
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__29) {
					{
					setState(213);
					match(T__29);
					}
				}

				}
				}
				setState(220);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LevelContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DndParser.INT, 0); }
		public LevelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_level; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterLevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitLevel(this);
		}
	}

	public final LevelContext level() throws RecognitionException {
		LevelContext _localctx = new LevelContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_level);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(221);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeatsContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(DndParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(DndParser.TEXT, i);
		}
		public FeatsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feats; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterFeats(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitFeats(this);
		}
	}

	public final FeatsContext feats() throws RecognitionException {
		FeatsContext _localctx = new FeatsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_feats);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(229);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TEXT) {
				{
				{
				setState(223);
				match(TEXT);
				setState(225);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__29) {
					{
					setState(224);
					match(T__29);
					}
				}

				}
				}
				setState(231);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HPContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DndParser.INT, 0); }
		public HPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hP; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterHP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitHP(this);
		}
	}

	public final HPContext hP() throws RecognitionException {
		HPContext _localctx = new HPContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_hP);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(232);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ACContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DndParser.INT, 0); }
		public ACContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aC; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterAC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitAC(this);
		}
	}

	public final ACContext aC() throws RecognitionException {
		ACContext _localctx = new ACContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_aC);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(234);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DndParser.INT, 0); }
		public StrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_str; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterStr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitStr(this);
		}
	}

	public final StrContext str() throws RecognitionException {
		StrContext _localctx = new StrContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_str);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(236);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DexContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DndParser.INT, 0); }
		public DexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).enterDex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DndListener ) ((DndListener)listener).exitDex(this);
		}
	}

	public final DexContext dex() throws RecognitionException {
		DexContext _localctx = new DexContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_dex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(238);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DndParser.INT, 0); }
		public ConContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_con; }
		@Override
